Done header with navigation bar

--- a/index.html
+++ b/index.html
@@ -14,5 +14,26 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body></body>
+
+  <body>
+    <header>
+      <img src="images/logo-panda.png" alt="logo" class="logo" />
+      <nav class="header-menu">
+        <label class="menu-icons" for="toggle-header-menu">
+          <span class="material-icons-sharp close-header-menu-icon">
+            close
+          </span>
+          <span class="material-icons-sharp toggle-header-menu-icon">
+            menu
+          </span>
+        </label>
+        <input type="checkbox" id="toggle-header-menu" />
+        <ul class="header-menu-links">
+          <li><a href="#projects" class="header-menu-link">Proyectos</a></li>
+          <li><a href="#skills" class="header-menu-link">Habilidades</a></li>
+          <li><a href="#contact" class="header-menu-link">Contacto</a></li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
