Main content (about-PO and his skills) and modified hamburger menu done

--- a/index.html
+++ b/index.html
@@ -30,10 +30,73 @@
         <input type="checkbox" id="toggle-header-menu" />
         <ul class="header-menu-links">
           <li><a href="#projects" class="header-menu-link">Proyectos</a></li>
-          <li><a href="#skills" class="header-menu-link">Habilidades</a></li>
+          <li><a href="#my-skills" class="header-menu-link">Habilidades</a></li>
           <li><a href="#contact" class="header-menu-link">Contacto</a></li>
         </ul>
       </nav>
     </header>
+
+    <main>
+      <section class="about-me">
+        <h1 class="name">Ping Xiao Po</h1>
+        <p class="description">
+          Vengo de un pueblo de pandas que fue destruido por el sádico Lord Shen
+          en su campaña para exterminar nuestra especie para evitar que se
+          cumpliera la profecía de que un guerrero "blanco y negro" lo
+          derrotaría. No sé qué pasó con mis padres, pero si no me hubieran
+          ocultado y metido en la caja en la que viajé por toda China y que se
+          encontró el Sr. Ping no habría sobrevivido.
+        </p>
+        <p class="description">
+          Me gusta mucho comer, pero es sobre todo cuando me enfado que me quedo
+          muy embostado. Ayudo a mi padre en su restaurante, se me da bien
+          cocinar. Sin embargo, mi mayor afición es el Kung Fu; conozco
+          muchísimas tradiciones de guerreros, movimientos, artefactos, etc, y
+          espero algún día llegar a ser El Guerrero Dragón.
+        </p>
+      </section>
+
+      <section id="my-skills">
+        <h2 class="skills-title">Mis habilidades</h2>
+        <ul class="skills">
+          <li class="skill">
+            <p class="skill-name">Fuerza<span class="skill-percentage">99%</span></p>
+            <div class="progress-bar-container">
+              <div class="progress-bar-99"></div>
+            </div>
+          </li>
+          <li class="skill">
+            <p class="skill-name">Velocidad<span class="skill-percentage">95%</span></p>
+            <div class="progress-bar-container">
+              <div class="progress-bar-95"></div>
+            </div>
+          </li>
+          <li class="skill">
+            <p class="skill-name">Agilidad<span class="skill-percentage">97%</span></p>
+            <div class="progress-bar-container">
+              <div class="progress-bar-97"></div>
+            </div>
+          </li>
+          <li class="skill">
+            <p class="skill-name">Madurez<span class="skill-percentage">30%</span></p>
+            <div class="progress-bar-container">
+              <div class="progress-bar-30"></div>
+            </div>
+          </li>
+          <li class="skill">
+            <p class="skill-name">Madurez<span class="skill-percentage">30%</span></p>
+            <div class="progress-bar-container">
+              <div class="progress-bar-30"></div>
+            </div>
+          </li>
+          <li class="skill">
+            <p class="skill-name">Madurez<span class="skill-percentage">30%</span></p>
+            <div class="progress-bar-container">
+              <div class="progress-bar-30"></div>
+            </div>
+          </li>
+        </ul>
+      </section>
+    </main>
   </body>
 </html>
