Banner img link to projects page done and added scroll padding

--- a/index.html
+++ b/index.html
@@ -60,37 +60,49 @@
         <h2 class="skills-title">Mis habilidades</h2>
         <ul class="skills">
           <li class="skill">
-            <p class="skill-name">Fuerza<span class="skill-percentage">99%</span></p>
+            <p class="skill-name">
+              Fuerza<span class="skill-percentage">99%</span>
+            </p>
             <div class="progress-bar-container">
               <div class="progress-bar-99"></div>
             </div>
           </li>
           <li class="skill">
-            <p class="skill-name">Velocidad<span class="skill-percentage">95%</span></p>
+            <p class="skill-name">
+              Velocidad<span class="skill-percentage">95%</span>
+            </p>
             <div class="progress-bar-container">
               <div class="progress-bar-95"></div>
             </div>
           </li>
           <li class="skill">
-            <p class="skill-name">Agilidad<span class="skill-percentage">97%</span></p>
+            <p class="skill-name">
+              Agilidad<span class="skill-percentage">97%</span>
+            </p>
             <div class="progress-bar-container">
               <div class="progress-bar-97"></div>
             </div>
           </li>
           <li class="skill">
-            <p class="skill-name">Madurez<span class="skill-percentage">30%</span></p>
+            <p class="skill-name">
+              Madurez<span class="skill-percentage">30%</span>
+            </p>
             <div class="progress-bar-container">
               <div class="progress-bar-30"></div>
             </div>
           </li>
           <li class="skill">
-            <p class="skill-name">Madurez<span class="skill-percentage">30%</span></p>
+            <p class="skill-name">
+              Madurez<span class="skill-percentage">30%</span>
+            </p>
             <div class="progress-bar-container">
               <div class="progress-bar-30"></div>
             </div>
           </li>
           <li class="skill">
-            <p class="skill-name">Madurez<span class="skill-percentage">30%</span></p>
+            <p class="skill-name">
+              Madurez<span class="skill-percentage">30%</span>
+            </p>
             <div class="progress-bar-container">
               <div class="progress-bar-30"></div>
             </div>
@@ -98,5 +110,21 @@
         </ul>
       </section>
     </main>
+
+    <figure class="banner" id="projects">
+      <a href="projects.html">
+        <img
+          class="banner-img"
+          src="images/banner1318.jpg"
+          srcset="
+            images/banner550.jpg   550w,
+            images/banner980.jpg   980w,
+            images/banner1318.jpg 1318w,
+            images/banner1653.jpg 1653w
+          "
+        />
+        <figcaption class="banner-text">MIS PROYECTOS</figcaption></a
+      >
+    </figure>
   </body>
 </html>
