Footer done and removed not necessary property in the mobile first approach from the form

--- a/index.html
+++ b/index.html
@@ -240,5 +240,32 @@
         <input class="form-submit" type="submit" value="Enviar" />
       </fieldset>
     </form>
+
+    <footer>
+      <a
+        class="footer-link"
+        href="https://www.instagram.com/kungfupanda/"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <i class="fa fa-instagram"></i>
+      </a>
+      <a
+        class="footer-link"
+        href="https://www.youtube.com/@kungfupanda"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <i class="fa fa-youtube"></i>
+      </a>
+      <a
+        class="footer-link"
+        href="https://www.facebook.com/KungFuPanda/"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <i class="fa fa-facebook"></i>
+      </a>
+    </footer>
   </body>
 </html>
