--- a/index.html
+++ b/index.html
@@ -29,9 +29,15 @@
         </label>
         <input type="checkbox" id="toggle-header-menu" />
         <ul class="header-menu-links">
-          <li><a href="#projects" class="header-menu-link">Proyectos</a></li>
-          <li><a href="#my-skills" class="header-menu-link">Habilidades</a></li>
-          <li><a href="#contact-form" class="header-menu-link">Contacto</a></li>
+          <li class="header-menu-list-item">
+            <a href="#projects" class="header-menu-link">Proyectos</a>
+          </li>
+          <li class="header-menu-list-item">
+            <a href="#my-skills" class="header-menu-link">Habilidades</a>
+          </li>
+          <li class="header-menu-list-item">
+            <a href="#contact-form" class="header-menu-link">Contacto</a>
+          </li>
         </ul>
       </nav>
     </header>
