Added Readme and comments to the html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
 
   <body>
+    <!------------------------ Header + sidebar ------------------------>
     <header>
       <img src="images/logo-panda.png" alt="logo" class="logo" />
       <nav class="header-menu">
@@ -41,8 +42,11 @@
         </ul>
       </nav>
     </header>
+    <!------------------------ End of Header ------------------------>
 
+    <!------------------------ Main content ------------------------->
     <main>
+      <!--------------------------- Description --------------------------->
       <section class="about-me">
         <h1 class="name">Ping Xiao Po</h1>
         <p class="description">
@@ -61,7 +65,9 @@
           espero algún día llegar a ser El Guerrero Dragón.
         </p>
       </section>
+      <!------------------------ End of Description ------------------------>
 
+      <!------------------------ Skill progress bars ------------------------>
       <section id="my-skills">
         <h2 class="skills-title">Mis habilidades</h2>
         <ul class="skills">
@@ -115,8 +121,11 @@
           </li>
         </ul>
       </section>
+      <!------------------------ End of Skill bars ------------------------>
     </main>
+    <!------------------------ End of Main Content ------------------------>
 
+    <!--------------------------- Banner img --------------------------->
     <figure class="banner" id="projects">
       <a href="projects.html">
         <img
@@ -132,7 +141,9 @@
         <figcaption class="banner-text">MIS PROYECTOS</figcaption></a
       >
     </figure>
+    <!------------------------- End of Banner ------------------------->
 
+    <!------------------------- Contact Form -------------------------->
     <form id="contact-form" action="/contact" method="post">
       <p class="form-title">Formulario de contacto</p>
       <fieldset class="main-info">
@@ -246,7 +257,9 @@
         <input class="form-submit" type="submit" value="Enviar" />
       </fieldset>
     </form>
+    <!---------------------- End of Contact Form ------------------------>
 
+    <!-------------------------- Footer -------------------------->
     <footer>
       <a
         class="footer-link"
@@ -273,5 +286,6 @@
         <i class="fa fa-facebook"></i>
       </a>
     </footer>
+    <!------------------------ End of Footer ------------------------>
   </body>
 </html>
